alertmanager/alertmanager-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    version: 1.0.0
  labels:
    io.service: alertmanager
  name: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      io.service: alertmanager
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        version: 1.0.0
      labels:
        io.service: alertmanager
    spec:
      containers:
        - args:
            - --config.file=/etc/alertmanager/config.yml
            - --storage.path=/alertmanager
            - --web.external-url=https://cbalertmanager.<domain>/
          image: prom/alertmanager
          name: alertmanager
          ports:
            - containerPort: 9093
          resources: {}
          volumeMounts:
          - name: alertmanager-config-yml
            mountPath: /etc/alertmanager
      hostname: alertmanager
      restartPolicy: Always
      volumes:
      - name: alertmanager-config-yml
        configMap:
          name: alertmanager-config-yml
          items:
          - key: config.yml
            path: config.yml
status: {}
