alertmanager/alertmanager-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    version: 1.0.0
  labels:
    io.service: alertmanager
  name: alertmanager
spec:
  ports:
    - name: "9093"
      port: 9093
      targetPort: 9093
  selector:
    io.service: alertmanager
status:
  loadBalancer: {}
